fixed spinner position on firefox

--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: flex-start;
+  // align-content: flex-start;
   justify-content: center;
   align-items: center;
   overflow: auto;
@@ -48,6 +48,9 @@
   &--about {
     background-color: rgba(38, 41, 43, 0.8);
     box-shadow: 0 0 5px 5px rgba(38, 41, 43, 0.8);
+  }
+  &--ts {
+    align-self: flex-start;
   }
   &--technologies {
     flex-wrap: wrap;
